# synapse

./: .gitignore  CMakeLists.txt  ConfigurationDefaults.txt  DOXYGEN.md  Doxyfile  README.md  build.bash
scripts/: Amplitudes.cc  ApplyCuts.cc  CMakeLists.txt  Calibrate.cc  CombinedFitDebug.cc  CompareSets.cc  ConvertToJson.cc  DensityProfile.cc  ImportG4BL.cc  ImportMAUSData.cc  ImportMAUSMinimal.cc  ImportMAUSSimulation.cc  ImportMice.cc  PhaseSpace.cc  Profiles.cc  Resolution.cc  ReweightBeam.cc  SystematicAmplitudes.cc  SystematicCorrections.cc  SystematicDensity.cc  SystematicPhaseSpace.cc  ToySimulation.cc  TransferMatrix.cc
src/: CMakeLists.txt
src/beam/: Aperture.cc  Aperture.hh  Bunch.cc  Bunch.hh  BunchData.cc  BunchData.hh  Definitions.cc  Definitions.hh  Drawer.cc  Drawer.hh  Extractor.cc  Extractor.hh  Stream.cc  Stream.hh  Variable.cc  Variable.hh
src/de/: AlphaComplex.cc  AlphaComplex.hh  Bin.cc  Bin.hh  DTFE.cc  DTFE.hh  Delaunay.cc  Delaunay.hh  DensityEstimator.cc  DensityEstimator.hh  Grid.cc  Grid.hh  Histogram.cc  Histogram.hh  Hull.cc  Hull.hh  Interpolator.cc  Interpolator.hh  KDE.cc  KDE.hh  KNearestNeighbours.cc  KNearestNeighbours.hh  LinearInterpolator.cc  LinearInterpolator.hh  LocalReachability.cc  LocalReachability.hh  MST.cc  MST.hh  OptimalBinning.cc  OptimalBinning.hh  PBATDE.cc  PBATDE.hh  ProbabilityContour.cc  ProbabilityContour.hh  SimplexInterpolator.cc  SimplexInterpolator.hh  TDE.cc  TDE.hh  Vertex.cc  Vertex.hh  (+2 more)
src/exc/: .Assert-inl.hh.swp  Assert-inl.hh  Assert.cc  Assert.hh  Exception.cc  Exception.hh  ExceptionLevel.hh  Pitch.cc  Pitch.hh
src/import/: CircleFitter.cc  CircleFitter.hh  LinkDef.h  MiceTrack.hh  ParticleIdentification.cc  ParticleIdentification.hh
src/math/: DCauchy.cc  DCauchy.hh  DChiSquared.cc  DChiSquared.hh  DExponential.cc  DExponential.hh  DFunction.cc  DFunction.hh  DGaus.cc  DGaus.hh  DMaxwell.cc  DMaxwell.hh  DMultiGaus.cc  DMultiGaus.hh  DPoisson.cc  DPoisson.hh  DSpiral.cc  DSpiral.hh  DTriangular.cc  DTriangular.hh  DUniform.cc  DUniform.hh  DecompLU-inl.hh  DecompLU.hh  DecompQR-inl.hh  DecompQR.hh  Geometry.cc  Geometry.hh  Matrix-inl.hh  Matrix.hh  ScatterGraph.cc  ScatterGraph.hh  Statistics-inl.hh  Statistics.cc  Statistics.hh  Vector-inl.hh  Vector.hh
src/toy/: EnergyLoss.cc  EnergyLoss.hh  FieldHandler.cc  FieldHandler.hh  Generator.cc  Generator.hh  MaterialDefinitions.hh  Scattering.cc  Scattering.hh  ToyTools.cc  ToyTools.hh  Transport.cc  Transport.hh
src/utils/: GeometryHandler.cc  GeometryHandler.hh  Globals.cc  Globals.hh  InfoBox.cc  InfoBox.hh  ProgressBar.cc  ProgressBar.hh
tests/: CMakeLists.txt  SampleFromString.cc  TestAlphaComplex.cc  TestAmplitudeRecon.cc  TestConvexeHull.cc  TestEstimatorConvergence.cc  TestEstimatorQuality.cc  TestOptimalParameters.cc
